--- a/web.html
+++ b/web.html
@@ -4,9 +4,9 @@
         <title>goframe websocket echo server</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
         <!-- 1. 替换 Bootstrap CSS 为 jsDelivr 公共 CDN（兼容原代码的 3.x 版本） -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="bootstrap.min.css">
         <!-- 2. 替换 jQuery 为 jsDelivr 公共 CDN（兼容原代码的 1.x 版本） -->
-        <script src="https://cdn.jsdelivr.net/npm/jquery@1.11.3/dist/jquery.min.js"></script>
+        <script src="jquery-1.8.3.min.js"></script>
     </head>
     <body>
         <!-- 原页面内容不变 -->
